--- a/DDDApplication/DDDApplication.MVC/Web.config
+++ b/DDDApplication/DDDApplication.MVC/Web.config
@@ -19,13 +19,16 @@
   Criar o banco de dados assim que possível.
   _______________________________________________________________ 
   -->
-  
+  <connectionStrings>
+    <add name="MYConection" connectionString="Data Source=UDI-8KQTFV2\MYDATABASEMSSQLL;Initial Catalog=MYDB_JC;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <!-- 
   _______________________________________________________________
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <globalization culture="pt-BR" uiCulture="pt-BR" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
