Criação de funcionalidade para buscar o cliente por parte do nome.

--- a/DDDApplication/DDDApplication.MVC/DDDApplication.MVC.csproj
+++ b/DDDApplication/DDDApplication.MVC/DDDApplication.MVC.csproj
@@ -178,6 +178,7 @@
     <Content Include="Scripts\cldr\event.js" />
     <Content Include="Scripts\cldr\supplemental.js" />
     <Content Include="Scripts\cldr\unresolved.js" />
+    <Content Include="Scripts\jquery.events.of.buttons.js" />
     <Content Include="Scripts\globalize.js" />
     <Content Include="Scripts\globalize\currency.js" />
     <Content Include="Scripts\globalize\date.js" />
@@ -225,6 +226,7 @@
     <Content Include="Views\Products\Edit.cshtml" />
     <Content Include="Views\Products\Delete.cshtml" />
     <Content Include="Views\Customers\Special.cshtml" />
+    <Content Include="Views\Customers\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
